# ITLab_LU_decomposition

./: .gitignore  .gitmodules  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Information.ipynb  LU_Decomposition.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Solutions/: CMakeLists.txt  ITLab_Solutions.sln
Solutions/DecompositionBenchmarks/: DecompositionBenchmarks.cpp  DecompositionBenchmarks.vcxproj  DecompositionBenchmarks.vcxproj.filters
Solutions/LU_Decomposition/: LU_Decomposition.vcxproj  LU_Decomposition.vcxproj.filters  Matrix.cpp  Matrix.h
Solutions/base/: Matrix.cpp  Matrix.h  base.vcxproj  base.vcxproj.filters
Solutions/base_test/: base_test.vcxproj  base_test.vcxproj.filters  test_decomposition.cpp
Solutions/test_benchmarks/: test_benchmarks.vcxproj  test_benchmarks.vcxproj.filters
src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LU_Decomposition.vcxproj  LU_Decomposition.vcxproj.filters  Matrix.cpp  Matrix.h  cmake_install.cmake  postfix.cpp
src/Debug/: LU_Decomposition.lib
src/LU_Decomposition.dir/Debug/LU_Decomposition.tlog/: Cl.items.tlog  CustomBuild.read.1.tlog  icx-cl-clang-cl.delete.1.tlog  icx-cl.command.1.tlog  icx-cl.read.1.tlog  icx-cl.write.1.tlog  xilib-xilink-lld-link.delete.1.tlog  xilib-xilink.read.1.tlog  xilib-xilink.write.1.tlog  xilib.command.1.tlog
src/LU_Decomposition.dir/Release/LU_Decomposition.tlog/: Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  LU_Decomposition.lastbuildstate  icx-cl-clang-cl.delete.1.tlog  icx-cl.command.1.tlog  icx-cl.read.1.tlog  icx-cl.write.1.tlog  xilib-xilink-lld-link.delete.1.tlog  xilib-xilink.read.1.tlog  xilib-xilink.write.1.tlog  xilib.command.1.tlog
src/Release/: LU_Decomposition.lib
tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  all_tests.cpp  cmake_install.cmake  packages.config  test.cpp  test_LU_Decomposition.vcxproj  test_LU_Decomposition.vcxproj.filters  test_LU_Decomposition[1]_include.cmake  test_LU_Decomposition[1]_tests.cmake  test_matrix.cpp
tests/test_LU_Decomposition.dir/Release/: test_LU_Decomposition.exe.recipe
tests/test_LU_Decomposition.dir/Release/test_LU_.3F61A43D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+17 more)
(+116 files in other folders)
